--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,18 +1,4 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-bzip2=1.0.8=h80987f9_6
-ca-certificates=2024.7.2=hca03da5_0
-libffi=3.4.4=hca03da5_1
-ncurses=6.4=h313beb8_0
-openssl=3.0.14=h80987f9_0
-pip=24.2=py310hca03da5_0
-python=3.10.14=hb885b13_1
-readline=8.2=h1a28f6b_0
-setuptools=72.1.0=py310hca03da5_0
-sqlite=3.45.3=h80987f9_0
-tk=8.6.14=h6ba3021_0
-tzdata=2024a=h04d1e81_0
-wheel=0.43.0=py310hca03da5_0
-xz=5.4.6=h80987f9_1
-zlib=1.2.13=h18a0788_1
+Flask==2.3.2
+gunicorn==20.1.0
+requests==2.31.0
+Jinja2==3.1.2
